--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </a>
       </li>
       <li>
-        <a href="https://github.com/Beginner-Coder-ALEX" class="link">
+        <a href="https://github.com/MubeenAhmad1123" class="link">
           <img class="dev-icon" src="Images/Github.png" alt="GitHub" />
           GitHub
         </a>
