--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- ✅ Navbar -->
   <div id="navbar">
     <div class="logo">
-      <a href="Index.html" class="logo-link">Bazaarly</a>
+      <a href="index.html" class="logo-link">Bazaarly</a>
     </div>
 
     <!-- ✅ Links shown on large screens -->
@@ -123,8 +123,8 @@
     <div class="footer-top">
       <ul id="footer-links">
         <li><a href="About.html">About</a></li>
-        <li><a href="https://wa.me/+923029821121">Contact Dev</a></li>
-        <li><a href="https://github.com/Beginner-Coder-ALEX">GitHub</a></li>
+        <li><a href="https://wa.me/+923218492868">Contact Dev</a></li>
+        <li><a href="https://github.com/MubeenAhmad1123">GitHub</a></li>
       </ul>
     </div>
     <div class="footer-bottom">
